[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/screens/sign_up.gd" type="Script" id=3]

[node name="SignUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 150.0
margin_right = -50.0
margin_bottom = -50.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="InputFieldCont" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 0.8
custom_constants/separation = 16

[node name="UsernameEdit" type="LineEdit" parent="InputFieldCont"]
margin_right = 750.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 88 )
rect_pivot_offset = Vector2( -1537, -253 )
align = 1
placeholder_text = "Username"

[node name="EmailEdit" type="LineEdit" parent="InputFieldCont"]
margin_top = 104.0
margin_right = 750.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 88 )
align = 1
placeholder_text = "E-mail"

[node name="PasswordEdit" type="LineEdit" parent="InputFieldCont"]
margin_top = 208.0
margin_right = 750.0
margin_bottom = 296.0
rect_min_size = Vector2( 0, 88 )
align = 1
secret = true
placeholder_text = "Password"

[node name="ConfirmPasswordEdit" type="LineEdit" parent="InputFieldCont"]
margin_top = 312.0
margin_right = 750.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 88 )
align = 1
secret = true
placeholder_text = "Confirm Password"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0999756

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 497.0
margin_bottom = 139.0
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_left = 501.0
margin_right = 998.0
margin_bottom = 139.0
size_flags_horizontal = 3

[node name="RegisterButton" type="Button" parent="HBoxContainer/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = -23.0
rect_min_size = Vector2( 400, 96 )
text = "Register"

[node name="Control3" type="Control" parent="HBoxContainer"]
margin_left = 1002.0
margin_right = 1500.0
margin_bottom = 139.0
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/Control2/RegisterButton" to="." method="_on_RegisterButton_pressed"]
